fn main() {
    tonic_build::configure()
        .build_server(false)
        .build_client(true)
        .compile_protos(
            &[
                "../../proto/exchange.proto",
                "../../proto/trade.proto",
                "../../proto/user.proto",
                "../../proto/controller_notify.proto",
                "../../proto/market.proto",
                "../../proto/price_aggregator.proto",
                "../../proto/risk_management.proto",
                "../../proto/order_notify.proto",
            ],
            &["../../proto"],
        )
        .unwrap();
}
